--- a/index.html
+++ b/index.html
@@ -1,6 +1,70 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>It Works 🎉</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Your Name | ILP Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+    <header>
+        <div class="logo">
+            <img src="https://csumb.edu/communications/brand-identity/logos/" alt="CSUMB Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cst300.html">CST 300</a></li>
+                <li><a href="cst311.html">CST 311</a></li>
+                <li><a href="cst334.html">CST 334</a></li>
+                <li><a href="cst349.html">CST 349</a></li>
+                <li><a href="cst499.html">CST 499</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+
+        <section class="hero">
+            <h1>Your Name</h1>
+            <p class="tagline">Information Technology & Communication Design Student</p>
+        </section>
+
+        <section class="bio">
+            <h2>About Me</h2>
+            <p>
+                I am currently pursuing a degree in Information Technology and Communication Design at California State University Monterey Bay.
+                My focus is on building intuitive, scalable, and human-centered digital solutions that bridge creativity and technical execution.
+            </p>
+            <p>
+                This ILP portfolio documents my academic journey, projects, and professional growth throughout the program.
+            </p>
+        </section>
+
+        <section class="program">
+            <h2>Program Outcomes</h2>
+            <ul>
+                <li>Design and develop modern web applications</li>
+                <li>Apply user-centered design principles</li>
+                <li>Demonstrate strong communication and collaboration skills</li>
+                <li>Integrate technical knowledge with creative problem solving</li>
+            </ul>
+        </section>
+
+        <section class="goals">
+            <h2>Professional Goals</h2>
+            <p>
+                My goal is to work in a forward-thinking technology environment where design and engineering intersect.
+                I aim to contribute to meaningful products while continuously refining both my technical expertise and creative perspective.
+            </p>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>© 2026 Your Name | CSUMB ILP Portfolio</p>
+    </footer>
+
+</body>
 </html>
