--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="logo">
-            <img src="https://csumb.edu/communications/brand-identity/logos/" alt="CSUMB Logo">
+            <img src="https://csumb.edu/media/csumb/legacy/legacy-site-images/section-editors/university-communications/updated-branding/Logo_Primary-Full-color.jpg" alt="CSUMB Logo" class="csumb-logo">
         </div>
         <nav>
             <ul>
@@ -27,15 +27,15 @@
     <main class="container">
 
         <section class="hero">
-            <h1>Your Name</h1>
-            <p class="tagline">Information Technology & Communication Design Student</p>
+            <h1>Richard Crook</h1>
+            <p class="tagline">Computer Science Student</p>
         </section>
 
         <section class="bio">
             <h2>About Me</h2>
             <p>
-                I am currently pursuing a degree in Information Technology and Communication Design at California State University Monterey Bay.
-                My focus is on building intuitive, scalable, and human-centered digital solutions that bridge creativity and technical execution.
+                I am currently pursuing a degree in Computer Science at California State University Monterey Bay.
+                My focus is on building efficient, scalable, and user-friendly software solutions that combine technical excellence with creative problem-solving.
             </p>
             <p>
                 This ILP portfolio documents my academic journey, projects, and professional growth throughout the program.
