--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="site-header">
         <div class="logo">
             <img src="https://csumb.edu/media/csumb/legacy/legacy-site-images/section-editors/university-communications/updated-branding/Logo_Primary-Full-color.jpg" alt="CSUMB Logo" class="csumb-logo">
         </div>
