updates to meet rubric

--- a/cst300.html
+++ b/cst300.html
@@ -23,22 +23,87 @@
 
     <main class="container">
 
-        <section>
-            <h1>CST 300: Major ProSeminar</h1>
+    <section>
+        <h1>CST 300: Graduation Writing Assessment for Computing and Design</h1>
 
-            <h2>Course Description</h2>
-            <p>
-                CST 300 focuses on professional communication within the field of information technology.
-                The course strengthens technical writing, research, and presentation skills necessary for success in industry environments.
-            </p>
+        <h2>Course Description</h2>
+        <p>
+            This course develops critical reading and writing skills for the Computing, Design, 
+            and Technology fields. Students learn to adapt their writing for different audiences 
+            and purposes while adhering to disciplinary conventions.
+        </p>
+        <p>
+            The curriculum focuses on expository and academic writing, professional communication, 
+            source evaluation and selection, and effective communication with diverse audiences. 
+            Emphasis is placed on clarity, structure, argument development, and evidence-based analysis.
+        </p>
 
-            <h2>Final Project</h2>
-            <p>
-                For the final project, I developed a comprehensive technical research report analyzing emerging web technologies
-                and their impact on user experience design.
-            </p>
+        <p><strong>Prerequisites:</strong> GE Area 1A, 1B, and 1C with a C- or better, and Junior or Senior Standing</p>
+        <p><strong>University Requirement:</strong> GWAR – Graduation Writing Assessment Requirement</p>
+        <p><strong>Typically Offered:</strong> Fall, Spring</p>
+        <p><strong>Units:</strong> 3</p>
 
-        </section>
+        <h2>Final Project: Ethics Essay</h2>
+        <p>
+            The culminating assignment for CST 300 was an ethics-based analytical essay addressing 
+            the question: <em>Should technology companies be legally compelled to include encryption 
+            backdoors in their products?</em>
+        </p>
+
+        <h3>Project Overview</h3>
+        <p>
+            This essay examined the ethical, legal, and technical implications of mandating encryption 
+            backdoors for law enforcement access. The paper analyzed arguments related to national security, 
+            individual privacy rights, cybersecurity risks, and corporate responsibility.
+        </p>
+        <p>
+            Drawing from academic research, legal analysis, and industry case studies, the essay evaluated 
+            competing perspectives on whether compelled access enhances public safety or undermines digital 
+            security. Particular attention was given to the technical reality that introducing intentional 
+            vulnerabilities can weaken systems for all users, not just targeted individuals.
+        </p>
+
+        <h3>Key Themes Explored</h3>
+        <ul>
+            <li>The balance between privacy rights and national security interests</li>
+            <li>The technical risks of creating intentional vulnerabilities in encryption systems</li>
+            <li>The global implications of weakening cryptographic standards</li>
+            <li>The ethical responsibility of technology companies to protect user data</li>
+            <li>Precedents involving government access to encrypted communications</li>
+        </ul>
+
+        <h3>Conclusion</h3>
+        <p>
+            The essay concluded that legally mandated encryption backdoors introduce systemic security 
+            risks that outweigh potential investigative benefits. Strong encryption protects not only 
+            individual privacy but also financial systems, critical infrastructure, and national security. 
+            Compromising encryption standards may create broader vulnerabilities that could be exploited 
+            by malicious actors.
+        </p>
+
+        <h2>Skills Developed</h2>
+        <ul>
+            <li>Ethical analysis within computing contexts</li>
+            <li>Structured argumentation and thesis development</li>
+            <li>Evaluation of scholarly and policy-based sources</li>
+            <li>Professional academic writing and revision</li>
+            <li>Clear communication of complex technical concepts</li>
+        </ul>
+
+        <h2>Reflection</h2>
+        <p>
+            This project strengthened my ability to analyze controversial technology issues 
+            through both ethical and technical lenses. It required careful consideration of 
+            real-world trade-offs and reinforced the importance of evidence-based reasoning 
+            in professional and academic communication.
+        </p>
+        <p>
+            The experience improved my confidence in presenting complex computing topics in 
+            a structured and persuasive format, an essential skill for leadership and 
+            decision-making roles in technology.
+        </p>
+    </section>
+
 
     </main>
 
