--- a/cst300.html
+++ b/cst300.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-    <header>
+    <header class="site-header">
+        <div class="logo">
+            <img src="https://csumb.edu/media/csumb/legacy/legacy-site-images/section-editors/university-communications/updated-branding/Logo_Primary-Full-color.jpg" alt="CSUMB Logo" class="csumb-logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="cst300.html" class="active">CST 300</a></li>
+                <li><a href="cst300.html">CST 300</a></li>
                 <li><a href="cst311.html">CST 311</a></li>
                 <li><a href="cst334.html">CST 334</a></li>
                 <li><a href="cst349.html">CST 349</a></li>
