--- a/cst349.html
+++ b/cst349.html
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <p>© 2026 Your Name | CSUMB ILP Portfolio</p>
+        <p>© 2026 Richard Crook | CSUMB ILP Portfolio</p>
     </footer>
 
 </body>
