--- a/cst300.html
+++ b/cst300.html
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-        <p>© 2026 Your Name | CSUMB ILP Portfolio</p>
+        <p>© 2026 Richard Crook | CSUMB ILP Portfolio</p>
     </footer>
 
 </body>
