--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Name | ILP Portfolio</title>
+    <title>Richard Crook | ILP Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -63,7 +63,7 @@
     </main>
 
     <footer>
-        <p>© 2026 Your Name | CSUMB ILP Portfolio</p>
+        <p>© 2026 Richard Crook | CSUMB ILP Portfolio</p>
     </footer>
 
 </body>
